# cplot

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  cplot.cabal  stack.yaml
_diary/: diary.tex
app/: Main.hs
example/: fern.py  requirements.txt  test.py  test2.py
examples/: .gitignore  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.cpp  ex07.py  ex08.py  ex09.py  requirements.txt  test.py  test2.py
resources/: gui.glade
src/: App.hs  Buffer.hs  Chart.hs  Dataset.hs  Events.hs  Main.hs  MinMaxBuffer.hs  MinMaxQueue.hs  Model.hs  Options.hs  Parser.hs  Utils.hs  View.hs
src/App/: Types.hs
src/Buffer/Backend/: MinMax.hs  Queue.hs
src/Buffer/Internal/: Types.hs
src/Chart/: Types.hs
src/Chart/Backend/: Chart.hs
src/Dataset/Backend/: Histogram.hs  Line.hs  MinMaxQueue.hs  Scatter.hs
src/Dataset/Internal/: Types.hs
src/Graphics/: CPlot.hs
src/Model/: Frame.hs
src/Parser/: GUI.hs  Generic.hs  Message.hs  Options.hs  Point.hs  Types.hs
src/View/: Axes.hs
