name:                cplot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SilverSylvester/cplot#readme
license:             MIT
license-file:        LICENSE
author:              Conor Reynolds
maintainer:          reynolds.conor@gmail.com
copyright:           2017-2018 Conor Reynolds
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cplot
  hs-source-dirs:      src
  other-modules:       App
                     , App.Types
                     , Chart
                     , Chart.Types
                     , Parser.Point
                     , Parser.Options
                     , Options
                     , MinMaxQueue
                     , MinMaxBuffer
                     , Utils
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , containers >= 0.5
                     , stm
                     , Chart >= 1.8
                     , Chart-cairo >= 1.8
                     , haskell-gi >= 0.20
                     , haskell-gi-base >= 0.20
                     , gi-gtk >= 3.0
                     , gi-cairo >= 1.0
                     , gi-gdk >= 3.0
                     , gi-glib >= 2.0
                     , colour >= 2.3
                     , lens >= 4.15
                     , mtl >= 2.2
                     , text >= 1.2
                     , bytestring >= 0.10
                     , scientific >= 0.3
                     , cairo >= 0.13
                     , pipes >= 4.3
                     , pipes-bytestring
                     , pipes-group >= 1.0
                     , safe-exceptions >= 0.1
                     , megaparsec >= 6.2
                     , attoparsec
                     , optparse-applicative >= 0.13
                     , data-default >= 0.7
                     , yaml
                     , aeson
                     , raw-strings-qq
                     , directory
                     , monad-control
                     , transformers-base
                     , lifted-base
