name:                cplot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SilverSylvester/cplot#readme
license:             MIT
license-file:        LICENSE
author:              Conor Reynolds
maintainer:          reynolds.conor@gmail.com
copyright:           2017-2018 Conor Reynolds
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cplot
  hs-source-dirs:      src
  other-modules:       App
                     , App.Types

                     , Chart
                     , Chart.Backend.Chart
                     , Chart.Types

                     , Options

                     , Parser.GUI
                     , Parser.Message
                     , Parser.Options
                     , Parser.Types

                     , Buffer
                     , Buffer.Backend.MinMax
                     , Buffer.Backend.Queue
                     , Buffer.Internal.Types

                     , Dataset
                     , Dataset.Backend.Line
                     , Dataset.Backend.Scatter
                     , Dataset.Backend.Histogram
                     , Dataset.Backend.MinMaxQueue
                     , Dataset.Internal.Types

  main-is:             Main.hs

  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints
                       -O2 -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010

  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , EmptyCase
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , PatternSynonyms
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators

  build-depends:       base >= 4.7 && < 5

                     , text >= 1.2
                     , bytestring >= 0.10

                     , Chart >= 1.8
                     , Chart-cairo >= 1.8

                     , cairo >= 0.13
                     , haskell-gi >= 0.20
                     , haskell-gi-base >= 0.20
                     , gi-gtk >= 3.0
                     , gi-cairo >= 1.0
                     , gi-gdk >= 3.0
                     , gi-glib >= 2.0
                     , colour >= 2.3

                     , pipes >= 4.3
                     , pipes-bytestring >= 2.1.6
                     , pipes-group >= 1.0

                     , lens >= 4.15
                     , mtl >= 2.2
                     , safe-exceptions >= 0.1

                     , megaparsec >= 6.2
                     , attoparsec >= 0.13
                     , optparse-applicative >= 0.13
                     , yaml >= 0.8.25
                     , aeson >= 1.1.2.0

                     , unordered-containers >= 0.2.8
                     , data-default >= 0.7
                     , raw-strings-qq >= 1.1
                     , directory >= 1.3.0.0
                     , file-embed >= 0.0.10
